Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_kotorin.yml
+++ b/.github/workflows/main_kotorin.yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C32EB89F9C784566BF7114719CB95D6B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FA231A36E0134784AC9ABCAE89B2FE8A }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DBC8E93805C04CA5903A685F4CE32A5B }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -68,4 +59,4 @@ jobs:
           app-name: 'kotorin'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A23947942FDD4D74A8B11F4C1B4EC8BD }}
